<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blwebio-Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_oauth">OauthActivity</string>
	<string name="login_label_username">帐号</string>
	<string name="login_username_hint">Email</string>
	<string name="login_label_password">密码</string>
	<string name="login_label_signin">登录</string>
	<string name="login_register_link">没有帐号？ <a href="#" mce_href="#">注册</a></string>
</resources>
