<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="#808080" />

        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:text="@string/login_label_signin" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#FFF"
            android:textColorLink="#FF0066CC" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blacklighting_logo" />

</LinearLayout>